--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,15 @@
 <h1>Create Your Account</h1>
 
+<% if @user.errors.any? %>
+    <ol>
+        <% @user.errors.full_messages.each do |msg| %>
+            <li>
+                <%= msg %>
+            </li>
+        <% end %>
+    </ol>
+<% end %>
+
 <%= form_for @user do |f| %>
     <%= f.label :email %>
     <%= f.email_field :email, :required => true, :autofocus => true %>
