modify user signup and login url

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,10 +14,10 @@
     <nav>
       <% if @current_user.present? %>
         <%= link_to 'Users', admin_path if @current_user.admin? %>
-        <%= link_to 'Sign Out', users_login_path, :method => 'delete' %>
+        <%= link_to 'Sign Out', login_path, :method => 'delete' %>
       <% else %>
-        <%= link_to "Sign up", new_user_path %>
-        <%= link_to 'Sign in', users_login_path %>
+        <%= link_to "Sign up", signup_path %>
+        <%= link_to 'Sign in', login_path %>
       <% end %>
     </nav>
     <%= yield %>
