--- a/app/views/session/new.html.erb
+++ b/app/views/session/new.html.erb
@@ -4,7 +4,7 @@
     <h2><%= flash[:error] %></h2>
 <% end %>
 
-<%= form_tag users_login_path do %>
+<%= form_tag login_path do %>
     <%= label_tag :email %>
     <%= email_field_tag :email %>
 
