--- a/app/views/session/new.html.erb
+++ b/app/views/session/new.html.erb
@@ -1,15 +1,26 @@
-<h1>Log In</h1>
+<div class="row justify-content-center">
+    <div class="col-5">
+        <%= form_tag login_path do %>
+            <div class="form-group">
+                <h3>Log in</h3>
+            </div>
 
-<% if flash[:error].present? %>
-    <h2><%= flash[:error] %></h2>
-<% end %>
+            <div class="form-group">
+                <%= label_tag :email %>
+                <%= email_field_tag :email, '', :class => 'form-control' %>
+            </div>
 
-<%= form_tag login_path do %>
-    <%= label_tag :email %>
-    <%= email_field_tag :email %>
+            <div class="form-group">
+                <%= label_tag :password %>
+                <%= password_field_tag :password, '', :class => 'form-control' %>
+            </div>
 
-    <%= label_tag :password %>
-    <%= password_field_tag :password %>
-
-    <%= submit_tag "Sign In" %>
-<% end %>
+            <%= submit_tag "Log in", :class => 'btn btn-primary' %>
+        <% end %>
+        <hr>
+        <p class="font-weight-lighter">
+            Don't have an account?
+            <%= link_to 'Sign up for Storymap', signup_path %>
+        </p>
+    </div>
+</div>
