--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,3 @@
-<h1>Create Your Account</h1>
-
 <% if @user.errors.any? %>
     <ol>
         <% @user.errors.full_messages.each do |msg| %>
@@ -10,15 +8,29 @@
     </ol>
 <% end %>
 
-<%= form_for @user do |f| %>
-    <%= f.label :email %>
-    <%= f.email_field :email, :required => true, :autofocus => true %>
+<div class="row justify-content-center">
+    <div class="col-5">
+        <%= form_for @user do |f| %>
+            <div class="form-group">
+                <h3>Sign up</h3>
+            </div>
+            <div class="form-group">
+                <%= f.label :email %>
+                <%= f.email_field :email, :required => true, :autofocus => true, :class => 'form-control' %>
+            </div>
 
-    <%= f.label :password %>
-    <%= f.password_field :password, :required => true %>
+            <div class="form-group">
+                <%= f.label :password %>
+                <%= f.password_field :password, :required => true, :class => 'form-control' %>
+            </div>
 
-    <%= f.label :password_confirmation %>
-    <%= f.password_field :password_confirmation, :required => true %>
+            <div class="form-group">
+                <%= f.label :password_confirmation %>
+                <%= f.password_field :password_confirmation, :required => true, :class => 'form-control' %>
+            </div>
 
-    <%= f.submit 'Sign Up' %>
-<% end %>
+            <%= f.submit 'Sign Up', :class => 'btn btn-primary' %>
+
+        <% end %>
+    </div>
+</div>
