--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,18 +6,19 @@
     <%= csp_meta_tag %>
     
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <script src="https://kit.fontawesome.com/605919a6c4.js" crossorigin="anonymous"></script>
 
     <%# Leaflet map %>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ==" crossorigin=""/>
     <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js" integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew==" crossorigin=""></script>
 
+    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <script src="https://kit.fontawesome.com/605919a6c4.js" crossorigin="anonymous"></script>
+
   </head>
 
   <body>
  
-    <div class="container">
+    <div class="container-fluid">
      
       <header>
         <nav class="navbar justify-content-between">
@@ -46,9 +47,10 @@
         </nav>
       </header>
 
-      <%= yield %>
+      <div class="main">
+        <%= yield %>
+      </div>
     </div>
-    <script src="/javascripts/map.js"></script>
     
   </body>
 </html>
