--- a/app/views/session/new.html.erb
+++ b/app/views/session/new.html.erb
@@ -18,9 +18,9 @@
             <%= submit_tag "Log in", :class => 'btn btn-primary' %>
         <% end %>
         <hr>
-        <p class="font-weight-lighter">
+        <small class="form-text text-muted">
             Don't have an account?
             <%= link_to 'Sign up for Storymap', signup_path %>
-        </p>
+        </small>
     </div>
 </div>
