--- a/app/views/map/map_page.html.erb
+++ b/app/views/map/map_page.html.erb
@@ -1,10 +1,53 @@
 <div class="main">
-    <div id="mapid"></div>
+    <div class="map-area">
+        <div id="mapid"></div>
+    </div>
+
     <div class="side-form">
-        
+
     </div>
 </div>
 
-<script>
 
+<script>
+    // Init map
+    var mymap = L.map('mapid').setView([51.505, -0.09], 13);
+    L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw', {
+        maxZoom: 18,
+        attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, ' +
+            '<a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, ' +
+            'Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
+        id: 'mapbox/streets-v11',
+        tileSize: 512,
+        zoomOffset: -1
+    }).addTo(mymap);
+    // ----------------------------
+    
+    // var lmarker = L.marker([51.5, -0.09]).addTo(mymap)
+    // lmarker.bindPopup("<b>Hello world!</b><br />I am a popup.").openPopup();
+    
+    var popup = L.popup()
+
+    function createMarker (x, y) {
+        L.marker([x, y]).addTo(mymap);
+    }
+
+    function createMarkerWithPopUp (x, y, content){
+        L.marker([x, y]).addTo(mymap)
+		.bindPopup(content);
+    }
+    
+    function onMapClick(e) {
+        let x = e.latlng.lat;
+        let y = e.latlng.lng;
+        console.log(x, y);
+        
+        popup
+        .setLatLng(e.latlng)
+        .setContent('<%= link_to '+ Create story', comments_path, :id => "create-story", remote: true %><p id="create-favorite">+ Add favorite</p>')
+        .openOn(mymap);
+        return current_location = [x, y]
+    }
+    
+    mymap.on('click', onMapClick);
 </script>
