--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -2,5 +2,9 @@
     <%= f.label :content %>
     <%= f.text_field :content %>
 
+    <%= f.hidden_field :lat %>
+
+    <%= f.hidden_field :lng %>
+
     <%= f.submit %>
 <% end %>
