--- a/app/views/comments/new.js.erb
+++ b/app/views/comments/new.js.erb
@@ -1,2 +1,6 @@
+// Add a form for user to create comments after user click popup on map and add animation of slide in effect
 $('.side-form').append("<%= escape_javascript render 'form' %>");
 $('.map-area').animate({'width': '70%'}, 300);
+
+$('#comment_lat').val(current_location[0]);
+$('#comment_lng').val(current_location[1]);
