--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,10 +1,13 @@
-<%= form_with model: @comment, :class => "story-form" do |f| %>
-    <%= f.label :content %>
-    <%= f.text_field :content %>
 
+<%= form_with model: @comment, :class => "story-form" do |f| %>
+    <div class="form-group">
+        <%= f.label :content, "Leave your comments here" %>
+        <%= f.text_field :content %>
+    </div>
+    
     <%= f.hidden_field :lat %>
 
     <%= f.hidden_field :lng %>
 
-    <%= f.submit %>
+    <%= f.submit  %>
 <% end %>
