--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -1,6 +1,8 @@
 // Remove side form after user submit, and add a slide out animation to this form
 $('.story-form').remove();
 $('.map-area').animate({'width': '100%'}, 300);
+$('.side-form').animate({'width': '0%'}, 300)
+
 
 // Show user created comments in map pin
 createMarkerWithPopUp(current_location[0], current_location[1], '<%= @comment.content %> by <%= @comment.user.email %> ')
