finish edit function

--- a/app/views/comments/_edit_form.html.erb
+++ b/app/views/comments/_edit_form.html.erb
@@ -12,5 +12,6 @@
 
     <%= f.hidden_field :lng %>
 
-    <%= f.submit 'Add to map', :class => 'btn btn-primary text' %>
+    <%= f.submit 'Change', :class => 'btn btn-primary text' %>
+
 <% end %>
