--- a/app/views/map/map_page.html.erb
+++ b/app/views/map/map_page.html.erb
@@ -26,15 +26,18 @@
     // var lmarker = L.marker([51.5, -0.09]).addTo(mymap)
     // lmarker.bindPopup("<b>Hello world!</b><br />I am a popup.").openPopup();
     
-    var popup = L.popup()
+    var markers = [];    // Used to save all the comments;
+    var popup = L.popup();
 
     function createMarker (x, y) {
         L.marker([x, y]).addTo(mymap);
     }
 
-    function createMarkerWithPopUp (x, y, content){
-        L.marker([x, y]).addTo(mymap)
-		.bindPopup(content);
+    function createMarkerWithPopUp (x, y, content, commentId){
+        let marker = L.marker([x, y]);
+        markers[commentId] = marker;
+        marker.addTo(mymap)
+        .bindPopup(content);
     }
     
     function onMapClick(e) {
@@ -55,14 +58,14 @@
         // Add a popup on location where clicked
         popup
         .setLatLng(e.latlng)
-        .setContent('<%= link_to '+ Create story', comments_path, :id => "create-story", remote: true %><p id="create-favorite">+ Add favorite</p>')
+        .setContent('<%= link_to '+ Create story', comments_path, :id => "create-story", remote: true %>')
         .openOn(mymap);
         return current_location = [x, y];
     };
 
     function showCurrentUserMarks () {
         <% @current_user.comments.each do |comment| %>
-            createMarkerWithPopUp (<%= comment.location.lat %>, <%= comment.location.lng %>, `<p><%= comment.content %></p><%= link_to 'Edit', edit_comment_path(comment), remote: true %>`)
+            createMarkerWithPopUp (<%= comment.location.lat %>, <%= comment.location.lng %>, `<p><%= comment.content %></p><%= link_to 'Edit', edit_comment_path(comment), remote: true %>`, <%= comment.id %>)
         <% end %>
     };
 
