--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -5,4 +5,4 @@ $('.side-form').animate({'width': '0%'}, 300)
 
 
 // Show user created comments in map pin
-createMarkerWithPopUp(current_location[0], current_location[1], '<%= @comment.content %> by <%= @comment.user.email %> ')
+createMarkerWithPopUp(current_location[0], current_location[1], '<%= @comment.content %> by <%= @comment.user.email %><%= link_to 'Edit', edit_comment_path(@comment), remote: true %>')
