--- a/app/views/comments/destroy.js.erb
+++ b/app/views/comments/destroy.js.erb
@@ -3,5 +3,5 @@ $('.side-form').empty();
 $('.map-area').animate({'width': '100%'}, 300);
 $('.side-form').animate({'width': '0%'}, 300)
 
-// Remove marker after delte comments on map
+// Remove marker after delete comments on map
 mymap.removeLayer(markers[<%= @comment_id %>])
