--- a/app/views/map/map_page.html.erb
+++ b/app/views/map/map_page.html.erb
@@ -8,10 +8,9 @@
     </div>
 </div>
 
-
 <script>
     // Init map
-    var mymap = L.map('mapid').setView([51.505, -0.09], 13);
+    var mymap = L.map('mapid').setView([-33.8667096782975, 151.20397567749026], 13);
     L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw', {
         maxZoom: 18,
         attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, ' +
@@ -63,8 +62,20 @@
         return current_location = [x, y];
     };
 
+    function clearExistingMarkers() {
+        <% Comment.all.each do |comment| %>
+            mymap.removeLayer(markers[<%= comment.id %>]);
+        <% end %>
+    };
+
     function showCurrentUserMarks () {
         <% @current_user.comments.each do |comment| %>
+            createMarkerWithPopUp (<%= comment.location.lat %>, <%= comment.location.lng %>, `<p><%= comment.content %></p><p>by <%= comment.user.email %></p><%= link_to 'Edit', edit_comment_path(comment), remote: true %>`, <%= comment.id %>)
+        <% end %>
+    };
+
+    function showAllUsersMarks () {
+        <% Comment.all.each do |comment| %>
             createMarkerWithPopUp (<%= comment.location.lat %>, <%= comment.location.lng %>, `<p><%= comment.content %></p><%= link_to 'Edit', edit_comment_path(comment), remote: true %>`, <%= comment.id %>)
         <% end %>
     };
