--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -28,6 +28,10 @@
      margin-bottom: 2rem;
  }
 
+ .user-info > .dropdown {
+     margin-right: 5rem;
+ }
+
 // Map css
 .main {
     height: 100%;
