--- a/app/views/comments/update.js.erb
+++ b/app/views/comments/update.js.erb
@@ -4,5 +4,5 @@ $('.map-area').animate({'width': '100%'}, 300);
 $('.side-form').animate({'width': '0%'}, 300)
 
 // Change marker's popup content after editing
-let popupContent = markers[<%= @comment.id %>]._popup.getContent();
+let popupContent = markers[<%= @comment.id %>]._popup.getContent().replace('<a data-remote="true" href="/comments/<%= @comment.id %>/edit">Edit</a>', '<hr>');
 markers[<%= @comment.id %>].bindPopup(`<p>${popupContent}</p><p><%= @comment.content %></p><p>edited by <%= @current_user.email %></p><%= link_to 'Edit', edit_comment_path(@comment), remote: true %>`)
